# anomaly-detection

./: .gitignore  CLAUDE.md  QWEN.md  README.md  docker-compose.yml  skills-lock.json
.qwen/skills/speckit-plan/: SKILL.md
.specify/: init-options.json
.specify/memory/: constitution.md
backend/: .gitignore  Dockerfile  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
backend/scripts/: init_db.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  middleware.py  schemas.py
backend/src/api/routes/: analysis.py  anomalies.py  heatmap.py  sources.py  timeseries.py
backend/src/domain/: __init__.py  detector.py  mock_detector.py  models.py  transformer.py
backend/src/infrastructure/: __init__.py  http_client.py  logging.py  mock_1c_adapter.py
backend/src/infrastructure/persistence/: __init__.py  base.py  sqlite.py
backend/src/ui/: __init__.py  templates.py
backend/tests/contract/: conftest.py  test_analysis.py  test_anomalies.py  test_sources.py
backend/tests/unit/: test_detector_missing.py  test_detector_missing_data.py  test_detector_spike.py  test_detector_trend.py  test_detector_zero_neg.py  test_transformer.py
backend/ui/static/: chart.js  styles.css
backend/ui/templates/: base.html  dashboard.html  drilldown.html  heatmap.html  sources.html  table.html
specs/001-anomaly-detection-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-anomaly-detection-mvp/checklists/: requirements.md
specs/001-anomaly-detection-mvp/contracts/: 1c-http.md  api.md
specs/002-ui-charts-export-filters/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ui-charts-export-filters/checklists/: requirements.md
